[package]
name = "pin-clientd"
version = "1.0.0"
description = "PIN Client Daemon - Headless P2P Inference Network Operator"
authors = ["AiAssist Secure"]
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"

[[bin]]
name = "pin-clientd"
path = "src/main.rs"
